restartsh